Implementing base64 util class and unit testing.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
 		<p>Hello</p>
-		<p><a href="sayHello">sayHello</a></p>
+		<p><a href="protected/sayHello">sayHello</a></p>
 	</body>
 </html>
