Adding JSF bean and handling first get request using pre-render-view event

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		<p>Hello</p>
-		<p><a href="protected/sayHello">sayHello</a></p>
-	</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Crédito e Cobrança</title>
+    </head>
+    <body>
+        <h3>Acordo de Negociação de Dívida</h3>
+        <p><a href="sayHello.hello?m=Y29udHJhdG89MTIzJmFjYW89QSZuaXZlbD0z">Servlet executing</a> - Decode Base64 Message and show original value.</p>
+        <br/>
+        <p><a href="faces/negociacao.xhtml?m=Y29udHJhdG89MTIzJmFjYW89QSZuaXZlbD0z">JSF executing</a> - Decode Base64 Message and show original value.</p>
+        <br/>
+        <p><a href="protected/sayHello.hello?m=Y29udHJhdG89MTIzJmFjYW89QSZuaXZlbD0z">Servlet executing (autentication needed)</a> - Decode Base64 Message and show original value.</p>
+    </body>
 </html>
